--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,14 @@
-<h1>Hello</h1>
+<div class="mx-w-7xl mx-auto">
+  <h1 class="text-3xl font-bold text-center p-4">Task Manager</h1>
+</div>
+
+<div class="grid grid-cols-4 gap-4 p-4">
+  <app-task-form></app-task-form>
+  <app-task-list [tasks]="todoItems()" [heading]="'Todo'"></app-task-list>
+  <app-task-list [tasks]="inProgessItems()" [heading]="'In Progress'"></app-task-list>
+  <app-task-list [tasks]="completedItems()" [heading]="'Completed'"></app-task-list>
+
+  <!-- <div *ngFor="let item of todoItems(); let i = index">
+    <p>{{ item.task }} {{ item.status }}</p>
+  </div> -->
+</div>
